--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "expo-status-bar": "1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-animated-progress": "^1.0.2",
     "react-native-circular-progress": "1.3.7",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "3.15.0",
-    "react-native-svg": "12.3.0"
+    "react-native-svg": "12.3.0",
+    "zustand": "^4.1.4"
   },
   "devDependencies": {
     "@babel/core": "7.12.9"
