--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "3.15.0",
     "react-native-svg": "12.3.0",
-    "zustand": "^4.1.4"
+    "zustand": "^4.1.4",
+    "@react-native-async-storage/async-storage": "~1.17.3"
   },
   "devDependencies": {
     "@babel/core": "7.12.9"
